# Player

./: README.md
app/: build.gradle
app/include/libavcodec/: avcodec.h  version.h
app/src/androidTest/java/com/bds/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDemux.cpp  FFDemux.h  IDemux.cpp  IObserver.h  Java_com_bds_ffmpeg_UPlayer_Start.cpp  Java_com_bds_ffmpeg_UPlayer_Start.h  XData.h  XLog.h  XThread.cpp  XThread.h  native-lib.cpp
app/src/main/cpp/FFmpeg/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h
app/src/main/cpp/IPlayer/: IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerPorxy.cpp  IPlayerPorxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h
app/src/main/cpp/OpenGL/: GLVideoView.cpp  GLVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/cpp/Tool/: IObserver.cpp  IObserver.h  XData.cpp  XData.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XThread.cpp  XThread.h
app/src/main/java/com/bds/ffmpeg/: LocaleFileAdapter.java  MainActivity.java  OpenUrl.java  UPlayer.java  Video.java  VideoActivity.java  VideoListActivity.java  VideoViewActivity.java  XPlay.java
app/src/main/java/com/bds/ffmpeg/fruit/: DensityUtil.java  Fruit.java  FruitAdapter.java  MainActivity.java  VideoFileHelper.java
app/src/main/java/com/bds/ffmpeg/universalvideoview/: MainActivity.java  OrientationDetector.java  TestVideoView.java  UniversalActivity.java  UniversalMediaController.java  UniversalVideoView.java  Utils.java  VideoGestureListener.java
app/src/main/res/layout/: activity_main.xml  fruit.xml  fruit_item.xml  locale_video_item.xml  openurl.xml  unisal.xml  uvv_player_controller.xml  video_list.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/bds/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
